# IARA

./: .replit  Financial_Risk_Intelligence_Presentation.pptx  Hackathon_Final_Presentation.pptx  Portfolio_Risk_Dashboard_Presentation.pptx  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
IRA/: .replit  BACKEND_GUIDE_FOR_BEGINNERS.md  MOCK_DATA_GUIDE.md  SENTIMENT_ANALYSIS_GUIDE.md  app.py  calculation-details.md  pyproject.toml  replit.md
IRA/.local/state/replit/agent/filesystem/: filesystem_state.json
IRA/pipeline/: core_analysis.py  data_ingestion.py  ml_analysis.py  report_generator.py
IRA/reports/: portfolio_data_20251015_100841.csv  portfolio_data_20260224_153918.csv  risk_analysis_20251015_100841.csv  risk_analysis_20251015_145818.csv  risk_analysis_20251015_151142.csv  risk_analysis_20260224_153918.csv
IRA/utils/: mock_data.py  real_data.py
attached_assets/: Hackathon_2_1771887314319.pptx  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-_1771963163931.txt
pipeline/: core_analysis.py  data_ingestion.py  ml_analysis.py  sentiment_analysis.py  stock_cache.py  storage.py
reports/: portfolio_data_20251015_145818.csv  portfolio_data_20251015_151142.csv  portfolio_data_20251015_172438.csv  portfolio_data_20260222_185252.csv  portfolio_data_20260222_192011.csv  portfolio_data_20260222_193329.csv  portfolio_data_20260222_201305.csv  portfolio_data_20260222_202125.csv  portfolio_data_20260222_203657.csv  portfolio_data_20260222_205156.csv  portfolio_data_20260222_210355.csv  portfolio_data_20260222_210930.csv  (+102 more)
utils/: news_fetcher.py  (+2 more)
(+4 files in other folders)
