[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "textblob>=0.19.0",
]
